--- a/index.html
+++ b/index.html
@@ -4,8 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet House</title>
+
+     <!-- Initialize the fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com" />
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+     <link
+       href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Sora:wght@100..800&display=swap"
+       rel="stylesheet"
+     />
+ 
+     <!-- Initialize the tailwind and DaisyUI -->
+     <link
+       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css"
+       rel="stylesheet"
+       type="text/css"
+     />
+     <script src="https://cdn.tailwindcss.com"></script>
+ 
+     <!-- Initialize the icons -->
+     <script
+       src="https://kit.fontawesome.com/d7638ac396.js"
+       crossorigin="anonymous"
+     ></script>
+ 
+     <style>
+       .font-adlam {
+         font-family: "ADLaM Display", cursive;
+       }
+       .font-sora {
+         font-family: "Sora", sans-serif;
+       }
+     </style>
 </head>
 <body>
-    
+  <!-- Navbar -->
+    <section>
+        <nav class="bg-[#FFF9F4] mt-0">
+            <div class="w-11/12 mx-auto flex justify-between font-sora text-[#111111]">
+              <div class="flex gap-2">
+                <div><img class="w-full" src="c1-assets/logo-header.png" alt=""> </div>
+                <h2 class="text-2xl">Browse <span class="text-[#FFDC26]">4</span> Pets</h2>
+              </div>
+              <ul class="lg:flex lg:visible list-none hidden gap-5">
+                <li><a href="">Find a pet</a></li>
+                <li><a href="">Breeds</a></li>
+                <li><a href="">Contact us</a></li>
+              </ul>
+              <div class="hidden lg:gap-4 lg:visible lg:flex">
+                <i class="text-xl fa-regular fa-bell"></i>
+                <i class="text-xl fa-solid fa-magnifying=lass"></i>
+                <button class="font-normal btn btn-outline btn-warning">Login</button>
+                <button class="font-normal btn btn-warning">Register</button>
+              </div>
+            </div>
+           
+        </nav>
+    </section>
 </body>
 </html>
