--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en "data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,7 +45,7 @@
                 <div><img class="w-full" src="c1-assets/logo-header.png" alt=""> </div>
                 <h2 class="text-2xl">Browse <span class="text-[#FFDC26]">4</span> Pets</h2>
               </div>
-              <ul class="lg:flex lg:visible list-none hidden gap-5">
+              <ul class="lg:flex lg:visible list-none hidden gap-5 text-center">
                 <li><a href="">Find a pet</a></li>
                 <li><a href="">Breeds</a></li>
                 <li><a href="">Contact us</a></li>
@@ -56,9 +56,290 @@
                 <button class="font-normal btn btn-outline btn-warning">Login</button>
                 <button class="font-normal btn btn-warning">Register</button>
               </div>
+              <div class="md:hidden lg:hidden visible">
+                <div class="dropdown">
+                  <div class="tabindex="0" role="button" class="btn btn-ghost btn-circle relative">
+                    <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-5 w-5"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M4 6h16M4 12h16M4 18h7"
+                    />
+                  </svg>
+                  </div>
+                  <ul
+                  tabindex="0"
+                  class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-50 p-2 shadow absolute -left-6"
+                >
+                  <li><a href="">Find a pet</a></li>
+                  <li><a href="">Breeds</a></li>
+                  <li><a href="">Contact us</a></li>
+                </ul>
+                </div>
+              </div>
             </div>
-           
-        </nav>
+           </nav>
+
+           <div  class="w-11/12 mx-auto mb-16 bg-[url('./c1-assets/cat-big.png')] h-screen bg-no-repeat bg-cover">
+           <div class="space-y-3">
+<h1 class="font-adlam text-[#111111] text-5xl">Pamper Your Pet,<br>Because They Deserve <br>the Bes</h1>
+<p class="w-1/3">Discover a world of treats, toys, and essentials handpicked for your furry friends. Shop now and make tails wag with joy!</p>
+<button class="font-normal btn btn-warning">Find a pet</button>
+</div>
+           </div>
     </section>
+    <main>
+      <section class="w-11/12 mx-auto space-y-12 mb-16">
+        <h3 class="text-4xl font-adlam">Browse By Categories</h3>
+        <div class="grid grid-cols-2 gap-7 md:grid-cols-6 lg:grid-cols-6">
+          <div class="card bg-base-100 shadow-2xl">
+            <figure>
+              <img src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp" alt="Shoes">
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title font-adlam">Dog</h2>
+              <p class="font-sora">3 items</p>
+          </div>
+          </div>
+          <div class="card bg-base-100 shadow-xl">
+            <figure>
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title font-adlam">Fish</h2>
+              <p class="font-sora">3 items</p>
+            </div>
+          </div>
+          <div class="card bg-base-100 shadow-xl">
+            <figure>
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title font-adlam">Cat</h2>
+              <p class="font-sora">3 items</p>
+            </div>
+          </div>
+          <div class="card bg-base-100 shadow-xl">
+            <figure>
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title font-adlam">Birds</h2>
+              <p class="font-sora">3 items</p>
+            </div>
+          </div>
+          <div class="card bg-base-100 shadow-xl">
+            <figure>
+              <img
+                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title font-adlam">Small Pets</h2>
+              <p class="font-sora">3 items</p>
+            </div>
+          </div>
+          <div
+            class="bg-base-100 flex flex-col items-center justify-center space-y-10 shadow-xl"
+          >
+          <figure>
+            <img
+              src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+              alt="Shoes"
+            />
+          </figure>
+            <div class="avatar">
+              <div class="w-24 rounded-full">
+                <img class="" src="./assets/rabbit-cartoon.png" />
+              </div>
+            </div>
+
+            <div class="">
+              <h2 class="font-adlam">Rabit</h2>
+              <p class="font-sora">2 items</p>
+            </div>
+          </div>
+</div>
+      </section>
+      <section class="mt-20 mb-16 pb-16">
+<div class="w-11/12 mx-auto space-y-10">
+  <h3 class="pt-12 font-adlam text-4xl text-[#111111]">Trending Pet Products</h3>
+  <div class="flex flex-col lg:flex-row gap-6">
+    <div class="bg-[#F9DF8A] py-48 px-5 pt-10 relative space-y-4 rounded-xl">
+      <h3 class="font-adlam text-3xl">T-Shirt For Dogs</h3>
+      <p class="sora text-lg text-zinc-500 w-3/4">
+        Discover a world of treats, toys, and essentials handpicked for
+      </p>
+      <button class="px-7 py-3 rounded:lg font-sora text-xl bg-white">Shop Now</button>
+      <div class="absolute top-28 -right-12">
+        <img src="c1-assets/cute-pet-mid.png" alt="">
+      </div>
+    </div>
+    <div class="font-sora grid grid-cols-2 lg:grid-cols-3 lg:gap-8 gap-2">
+      <div class="flex py-4 pr-8 lg:pr-100 shadow-xl rounded-xl bg-white items-center">
+        <div class="bg-[#FFF9F4] rounded-md p-5 ml-6">
+<img src="c1-assets/dog-cartoon.png" alt="">
+        </div>
+<div class="ml-6">
+  <div class="flex gap-2 rating">
+    <input type="radio" name="rating-2" class="mask mask-star bg-orange-400"/>
+    <h1>4.5</h1>
+  </div>
+  <h1>Pet Bed</h1>
+  <h1>$39.99</h1>
+  </div>
+</div>
+<div class="flex py-4 pr-8 lg:pr-14 shadow-xl rounded-xl bg-white items-center">
+<div class="bg-[#FFF9F4] ml-6 rounded-md p-5">
+<img src="c1-assets/fish-cartoon.png" alt="">
+</div>
+<div class="ml-6">
+<div class="flex gap-2 rounded">
+  <input type="radio" name="rating-2" class="mask mask-star bg-orange-400"/>
+  <h1>4.5</h1>
+</div>
+<h1>Pet Bed</h1>
+<h1>$39.99</h1>
+</div>
+</div>
+<div class="flex py-4 pr-8 lg:pr-14 shadow-xl rounded-xl bg-white items-center">
+  <div class="bg-[#FFF9F4] ml-6 rounded-md p-5">
+  <img src="c1-assets/bird-cartoon.png" alt="">
+  </div>
+  <div class="ml-6">
+  <div class="flex gap-2 rounded">
+    <input type="radio" name="rating-2" class="mask mask-star bg-orange-400"/>
+    <h1>4.5</h1>
+  </div>
+  <h1>Pet Bed</h1>
+  <h1>$39.99</h1>
+  </div>
+  </div>
+  <div class="flex py-4 pr-8 lg:pr-14 shadow-xl rounded-xl bg-white items-center">
+    <div class="bg-[#FFF9F4] ml-6 rounded-md p-5">
+    <img src="c1-assets/rabbit-cartoon.png" alt="">
+    </div>
+    <div class="ml-6">
+    <div class="flex gap-2 rounded">
+      <input type="radio" name="rating-2" class="mask mask-star bg-orange-400"/>
+      <h1>4.5</h1>
+    </div>
+    <h1>Pet Bed</h1>
+    <h1>$39.99</h1>
+    </div>
+    </div>
+    <div class="flex py-4 pr-8 lg:pr-14 shadow-xl rounded-xl bg-white items-center">
+      <div class="bg-[#FFF9F4] ml-6 rounded-md p-5">
+      <img src="c1-assets/bird-cartoon.png" alt="">
+      </div>
+      <div class="ml-6">
+      <div class="flex gap-2 rounded">
+        <input type="radio" name="rating-2" class="mask mask-star bg-orange-400"/>
+        <h1>4.5</h1>
+      </div>
+      <h1>Pet Bed</h1>
+      <h1>$39.99</h1>
+      </div>
+      </div>
+      <div class="flex py-4 pr-8 lg:pr-14 shadow-xl rounded-xl bg-white items-center">
+        <div class="bg-[#FFF9F4] ml-6 rounded-md p-5">
+        <img src="c1-assets/pet-couch.png" alt="">
+        </div>
+        <div class="ml-6">
+        <div class="flex gap-2 rounded">
+          <input type="radio" name="rating-2" class="mask mask-star bg-orange-400"/>
+          <h1>4.5</h1>
+        </div>
+        <h1>Pet Bed</h1>
+        <h1>$39.99</h1>
+        </div>
+        </div>
+        <div class="flex py-4 pr-8 lg:pr-14 shadow-xl rounded-xl bg-white items-center">
+          <div class="bg-[#FFF9F4] ml-6 rounded-md p-5">
+          <img src="c1-assets/fish-cartoon.png" alt="">
+          </div>
+          <div class="ml-6">
+          <div class="flex gap-2 rounded">
+            <input type="radio" name="rating-2" class="mask mask-star bg-orange-400"/>
+            <h1>4.5</h1>
+          </div>
+          <h1>Pet Bed</h1>
+          <h1>$39.99</h1>
+          </div>
+          </div>
+          <div class="flex py-4 pr-8 lg:pr-14 shadow-xl rounded-xl bg-white items-center">
+            <div class="bg-[#FFF9F4] ml-6 rounded-md p-5">
+            <img src="c1-assets/pet-couch.png" alt="">
+            </div>
+            <div class="ml-6">
+            <div class="flex gap-2 rounded">
+              <input type="radio" name="rating-2" class="mask mask-star bg-orange-400"/>
+              <h1>4.5</h1>
+            </div>
+            <h1>Pet Bed</h1>
+            <h1>$39.99</h1>
+            </div>
+            </div>
+            <div class="flex py-4 pr-8 lg:pr-14 shadow-xl rounded-xl bg-white items-center">
+              <div class="bg-[#FFF9F4] ml-6 rounded-md p-5">
+              <img src="c1-assets/rabbit-cartoon.png" alt="">
+              </div>
+              <div class="ml-6">
+              <div class="flex gap-2 rounded">
+                <input type="radio" name="rating-2" class="mask mask-star bg-orange-400"/>
+                <h1>4.5</h1>
+              </div>
+              <h1 class="text-xl">Pet Bed</h1>
+              <h1>$39.99</h1>
+              </div>
+              </div>
+              
+</div>
+</div>
+</div>
+      </section>
+      <section class="w-11/12 max-auto mb-16">
+        <h3 class="font-adlam text-[#111111] text-4xl mb-9">Everyday Low Price</h3>
+        <div class="grid grid-cols-5 gap-6">
+          <div class="flex col-span-3 justify-center items-center shadow-xl">
+            <div>
+              <h3>Under Price</h3>
+              <h3>Pet Grooming Mitt</h3>
+              <h3>(Easy Hair Removal)</h3>
+              <h3>$7.99</h3>
+            </div>
+            <div class="w-1/2">
+<img src="c1-assets/cute-dog-mid.png" alt="">
+            </div>
+          </div>
+          <div class="col-span-2 flex shadow-xl">
+            <div>
+              <h3>T-Shirt for Dogs</h3>
+              <h3>$7.99</h3>
+            </div>
+            <div>
+              <img src="c1-assets/cute-pet-small.png" alt="">
+            </div>
+        </div>
+</div>
+      </section>
+    </main>
 </body>
 </html>
