add final project

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
         </div>
       </section>
       
-      <section class="w-11/12 mx-auto mb-80">
+      <section class="w-11/12 mx-auto mb-36">
         <h3 class="text-[#111111] font-adlam text-4xl mb-9">
           Everyday Low Price
         </h3>
@@ -417,16 +417,47 @@
           </div>
         </div>
       </section>
-      <section class="my-24">
+      <section class="w-11/12 mx-auto mb-96">
         <h3 class="text-[#111111] font-adlam text-4xl mb-9">
-          Asked Question
+          Asked <span class="bg-amber-200">Questions</span>
         </h3>
+        <div class="hero ">
+          <div class="hero-content flex-col lg:flex-row">
+            <img
+              src="c1-assets/faq.png"
+              class="max-w-sm rounded-lg shadow-2xl" />
+            <div>
+              <div class="collapse collapse-arrow bg-base-200">
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium">What types of pets do you sell?</div>
+                <div class="collapse-content">
+                  <p>We offer a variety of pets, including dogs, cats, birds, fish, and small animals like rabbits and hamsters.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow bg-base-200">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">What pet food brands do you carry?</div>
+                <div class="collapse-content">
+                  <p>What pet food brands do you carry?</p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow bg-base-200">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">Do you sell pet accessories and toys?
+                </div>
+                <div class="collapse-content">
+                  <p>Yes, we offer a wide range of pet toys, beds, collars, leashes, and grooming supplies.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     
 
     <footer class="bg-amber-300 relative">
-      <section class="w-11/12 mx-auto bg-[#FFF9F4] rounded-xl px-8 py-10 lg:px-14 absolute left-5 -top-80  lg:-top-96 lg:left-16">
+      <section class="w-11/12 mx-auto bg-[#FFF9F4] rounded-xl px-8 py-10 lg:px-14 absolute left-5 -top-80  lg:-top-60 lg:left-16">
         <div class="flex flex-col gap-9 lg:flex-row lg:gap-28 items-center">
           <div class="w-1/2 lg:w-1/5">
             <img class="w-full" src="c1-assets/cute-pet-mid.png" alt="" />
